2014-01-27  Niels Möller  <nisse@lysator.liu.se>

	Chacha implementation, based on contribution by Joachim
	Strömbergson.
	* chacha.h: New file.
	* chacha256-set-key.c (chacha256_set_key): New file and function.
	* chacha128-set-key.c (chacha128_set_key): New file and function.
	* chacha-set-key.c (chacha_set_key): New file and function.
	* chacha-set-iv.c (chacha_set_iv): New file and function.
	* chacha-core-internal.c (_chacha_core): New file and function.
	* chacha-crypt.c (chacha_crypt): New file and function.
	* Makefile.in (nettle_SOURCES): Added chacha files.
	(HEADERS): Added chacha.h.
	* testsuite/chacha-test.c: New file.
	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added chacha-test.c.

2014-01-26  Niels Möller  <nisse@lysator.liu.se>

	* nettle-internal.h (_NETTLE_AEAD_FIX): Renamed to...
	(_NETTLE_AEAD): ... new name, and deleted old definition. Also use
	_set_nonce instead of _set_iv.
	* nettle-internal.c (nettle_gcm_aes128, nettle_gcm_aes192)
	(nettle_gcm_aes256): Define in terms of new interface.
	(nettle_eax_aes128): Updated for _NETTLE_AEAD changes.

	* testsuite/gcm-test.c (test_gcm_hash): Likewise use struct
	gcm_aes128_ctx.
	(test_main): Added a testcase using the old interface based on
	struct gcm_aes_ctx.

	* examples/nettle-benchmark.c (time_gcm): Update to use new struct
	gcm_aes128_ctx. Also use name "gcm-aes128" in output.

	* gcm.h: New interface for gcm_aes128, gcm_aes192, gcm_aes256,
	using the new AES interface.
	(GCM_CTX): Reorder fields, putting the cipher context
	last.

	* Makefile.in (nettle_SOURCES): Added gcm-aes128.c, gcm-aes192.c,
	and gcm-aes256.c.

	* gcm-aes128.c: New file.
	* gcm-aes192.c: New file
	* gcm-aes256.c: New file.

2014-01-25  Niels Möller  <nisse@lysator.liu.se>

	* gcm.h (GCM_SET_KEY): Deleted length argument.
	* gcm-aes.c (gcm_aes_set_key): Use aes_set_encrypt_key and
	gcm_set_key, can no longer use GCM_SET_KEY macro.

2014-01-23  Niels Möller  <nisse@lysator.liu.se>
