@@ -680,7 +680,7 @@ main(int argc, char **argv)
       &nettle_des3,
       &nettle_serpent256,
       &nettle_twofish128, &nettle_twofish192, &nettle_twofish256,
-      &nettle_salsa20, &nettle_salsa20r12,
+      &nettle_salsa20, &nettle_salsa20r12, &nettle_chacha,
       NULL
     };
 
